--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "prefix": "+",
-    "token": "OTk3OTE2NjE1ODM0MzQ1NTEy.G_kDRt.ywrTynxbWkarLOuUiAO9BAKsC43vbFbyRjuKqE",
+    "token": "",
     "activity": "+help | .gg/halloweens",
     "accountslocation": "roblox.txt",
     "footer": "Halloween is cool."
