--- a/config.json
+++ b/config.json
@@ -3,5 +3,7 @@
     "token": "",
     "activity": "+help | .gg/halloweens",
     "accountslocation": "roblox.txt",
-    "footer": "Halloween is cool."
+    "footer": "Halloween is cool.",
+    "freegenchannel": 1013323993274667115,
+    "boostergenchannel": 1013323993274667116
 }
