--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "prefix": "+",
-    "token": "OTk3OTE2NjE1ODM0MzQ1NTEy.GHzdl6.MhrtjXI5rQjYWeGxphDsO8iI0KfGp-RuU2df2A",
+    "token": "",
     "activity": "+help | .gg/halloweens",
     "accountslocation": "roblox.txt",
     "footer": "Halloween is cool.",
